syntax = "proto3";

import "pb/proof.proto";

enum AxisType {
    Row = 0;
    Col = 1;
}

message Axis {
    bytes axis_id = 1;
    repeated bytes axis_half = 2;
}

enum SampleType {
    Data = 0;
    Parity = 1;
}

message Sample {
    bytes sample_id = 1;
    SampleType sample_type = 2;
    bytes sample_share = 3;
    proof.pb.Proof sample_proof = 4;
}
